--- a/FlowSolid 2/src/view/GameGUI.form
+++ b/FlowSolid 2/src/view/GameGUI.form
@@ -101,7 +101,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel7">
+        <Component class="javax.swing.JLabel" name="jLabelResult">
           <Properties>
             <Property name="text" type="java.lang.String" value="Result:"/>
           </Properties>
@@ -225,7 +225,7 @@
         <Component class="javax.swing.JLabel" name="jLabelPicture">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="250" y="270" width="0" height="-1"/>
+              <AbsoluteConstraints x="210" y="260" width="140" height="110"/>
             </Constraint>
           </Constraints>
         </Component>
